img path change

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/app.css">
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 
 <body>
@@ -17,20 +17,20 @@
                     <div class="nav-col-left">
                         <div class="logo">
                             <a href="/">
-                                <img src="/assets/img/header-logo.jpg" alt="">
+                                <img src="assets/img/header-logo.jpg" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="s_and_m">
                         <div class="social-icon">
                             <a href="/">
-                                <img src="/assets/img/icons/twitter.png" alt="">
+                                <img src="assets/img/icons/twitter.png" alt="">
                             </a>
                             <a href="/">
-                                <img src="/assets/img/icons/facebook.png" alt="">
+                                <img src="assets/img/icons/facebook.png" alt="">
                             </a>
                             <a href="/">
-                                <img src="/assets/img/icons/linkedin.png" alt="">
+                                <img src="assets/img/icons/linkedin.png" alt="">
                             </a>
                         </div>
                         <div class="menu-bar">
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                             <div class="col-image">
-                                <img src="/assets/img/icons/icon-1.png" alt="hand ">
+                                <img src="assets/img/icons/icon-1.png" alt="hand ">
                             </div>
                         </div>
                         <div class="col-r col-s">
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="col-image">
-                                <img src="/assets/img/icons/icon-2.png" alt="hand ">
+                                <img src="assets/img/icons/icon-2.png" alt="hand ">
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
                             <div class="col-image">
-                                <img src="/assets/img/icons/icon-3.png" alt="hand ">
+                                <img src="assets/img/icons/icon-3.png" alt="hand ">
                             </div>
                         </div>
                         <div class="col-r col-s">
@@ -140,7 +140,7 @@
                                 </div>
                             </div>
                             <div class="col-image">
-                                <img src="/assets/img/icons/icon-4.png" alt="hand ">
+                                <img src="assets/img/icons/icon-4.png" alt="hand ">
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="col-image">
-                                <img src="/assets/img/icons/icon-5.png" alt="hand ">
+                                <img src="assets/img/icons/icon-5.png" alt="hand ">
                             </div>
                         </div>
                         <div class="col-r col-s">
@@ -171,7 +171,7 @@
                                 </div>
                             </div>
                             <div class="col-image">
-                                <img src="/assets/img/icons/icon-6.png" alt="hand ">
+                                <img src="assets/img/icons/icon-6.png" alt="hand ">
                             </div>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                                 </div>
                             </div>
                             <div class="col-image">
-                                <img src="/assets/img/icons/icon-4.png" alt="hand ">
+                                <img src="assets/img/icons/icon-4.png" alt="hand ">
                             </div>
                         </div>
                         <div class="col-r col-s">
@@ -202,7 +202,7 @@
                                 </div>
                             </div>
                             <div class="col-image">
-                                <img src="/assets/img/icons/icon-4.png" alt="hand ">
+                                <img src="assets/img/icons/icon-4.png" alt="hand ">
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
             <div class="review-slider">
                 <div class="rerview-slide">
                     <div class="avtar">
-                        <img src="/assets/img/icons/avatar.png" alt="">
+                        <img src="assets/img/icons/avatar.png" alt="">
                     </div>
                     <div class="review-text">
                         <p>As one of the cofounders and the CEO, He is
@@ -230,7 +230,7 @@
                 </div>
                 <div class="rerview-slide">
                     <div class="avtar">
-                        <img src="/assets/img/icons/avatar.png" alt="">
+                        <img src="assets/img/icons/avatar.png" alt="">
                     </div>
                     <div class="review-text">
                         <p>As one of the cofounders and the CEO, He is
@@ -243,7 +243,7 @@
                 </div>
                 <div class="rerview-slide">
                     <div class="avtar">
-                        <img src="/assets/img/icons/avatar.png" alt="">
+                        <img src="assets/img/icons/avatar.png" alt="">
                     </div>
                     <div class="review-text">
                         <p>As one of the cofounders and the CEO, He is
@@ -256,7 +256,7 @@
                 </div>
                 <div class="rerview-slide">
                     <div class="avtar">
-                        <img src="/assets/img/icons/avatar.png" alt="">
+                        <img src="assets/img/icons/avatar.png" alt="">
                     </div>
                     <div class="review-text">
                         <p>As one of the cofounders and the CEO, He is
@@ -269,7 +269,7 @@
                 </div>
                 <div class="rerview-slide">
                     <div class="avtar">
-                        <img src="/assets/img/icons/avatar.png" alt="">
+                        <img src="assets/img/icons/avatar.png" alt="">
                     </div>
                     <div class="review-text">
                         <p>As one of the cofounders and the CEO, He is
@@ -293,7 +293,7 @@
                 <dinv class="up-row">
                     <div class="col-left">
                         <div class="info-g">
-                            <img src="/assets/img/event-img.jpg" alt="event">
+                            <img src="assets/img/event-img.jpg" alt="event">
                         </div>
                     </div>
                     <div class="col-right">
@@ -302,13 +302,13 @@
                         </div>
                         <div class="inner-text">
                             <ul>
-                                <li><span><img src="/assets/img/icons/calender.png" alt="calender"></span><a
+                                <li><span><img src="assets/img/icons/calender.png" alt="calender"></span><a
                                         href="#">Monday, 8:00 AM - Tuesday, 8:00 PM</a></li>
 
-                                <li class="location"><span><img src="/assets/img/icons/location.png"
+                                <li class="location"><span><img src="assets/img/icons/location.png"
                                             alt="location"></span><a href="#">Madisson Hotel</a></li>
 
-                                <li><span><img src="/assets/img/icons/address.png" alt="address"></span><a href="#">203
+                                <li><span><img src="assets/img/icons/address.png" alt="address"></span><a href="#">203
                                         St. Mountain View, San Franciso, California, USA</a></li>
                             </ul>
                         </div>
@@ -320,7 +320,7 @@
                 <dinv class="up-row">
                     <div class="col-left">
                         <div class="info-g">
-                            <img src="/assets/img/event-img.jpg" alt="event">
+                            <img src="assets/img/event-img.jpg" alt="event">
                         </div>
                     </div>
                     <div class="col-right">
@@ -329,13 +329,13 @@
                         </div>
                         <div class="inner-text">
                             <ul>
-                                <li><span><img src="/assets/img/icons/calender.png" alt="calender"></span><a
+                                <li><span><img src="assets/img/icons/calender.png" alt="calender"></span><a
                                         href="#">Monday, 8:00 AM - Tuesday, 8:00 PM</a></li>
 
-                                <li class="location"><span><img src="/assets/img/icons/location.png"
+                                <li class="location"><span><img src="assets/img/icons/location.png"
                                             alt="location"></span><a href="#">Madisson Hotel</a></li>
 
-                                <li><span><img src="/assets/img/icons/address.png" alt="address"></span><a href="#">203
+                                <li><span><img src="assets/img/icons/address.png" alt="address"></span><a href="#">203
                                         St. Mountain View, San Franciso, California, USA</a></li>
                             </ul>
                         </div>
@@ -347,7 +347,7 @@
                 <dinv class="up-row">
                     <div class="col-left">
                         <div class="info-g">
-                            <img src="/assets/img/event-img.jpg" alt="event">
+                            <img src="assets/img/event-img.jpg" alt="event">
                         </div>
                     </div>
                     <div class="col-right">
@@ -356,13 +356,13 @@
                         </div>
                         <div class="inner-text">
                             <ul>
-                                <li><span><img src="/assets/img/icons/calender.png" alt="calender"></span><a
+                                <li><span><img src="assets/img/icons/calender.png" alt="calender"></span><a
                                         href="#">Monday, 8:00 AM - Tuesday, 8:00 PM</a></li>
 
-                                <li class="location"><span><img src="/assets/img/icons/location.png"
+                                <li class="location"><span><img src="assets/img/icons/location.png"
                                             alt="location"></span><a href="#">Madisson Hotel</a></li>
 
-                                <li><span><img src="/assets/img/icons/address.png" alt="address"></span><a href="#">203
+                                <li><span><img src="assets/img/icons/address.png" alt="address"></span><a href="#">203
                                         St. Mountain View, San Franciso, California, USA</a></li>
                             </ul>
                         </div>
@@ -374,7 +374,7 @@
                 <dinv class="up-row">
                     <div class="col-left">
                         <div class="info-g">
-                            <img src="/assets/img/event-img.jpg" alt="event">
+                            <img src="assets/img/event-img.jpg" alt="event">
                         </div>
                     </div>
                     <div class="col-right">
@@ -383,13 +383,13 @@
                         </div>
                         <div class="inner-text">
                             <ul>
-                                <li><span><img src="/assets/img/icons/calender.png" alt="calender"></span><a
+                                <li><span><img src="assets/img/icons/calender.png" alt="calender"></span><a
                                         href="#">Monday, 8:00 AM - Tuesday, 8:00 PM</a></li>
 
-                                <li class="location"><span><img src="/assets/img/icons/location.png"
+                                <li class="location"><span><img src="assets/img/icons/location.png"
                                             alt="location"></span><a href="#">Madisson Hotel</a></li>
 
-                                <li><span><img src="/assets/img/icons/address.png" alt="address"></span><a href="#">203
+                                <li><span><img src="assets/img/icons/address.png" alt="address"></span><a href="#">203
                                         St. Mountain View, San Franciso, California, USA</a></li>
                             </ul>
                         </div>
@@ -413,7 +413,7 @@
             <div class="blog-row">
                 <div class="b-col">
                     <div class="col-image">
-                        <img src="/assets/img/laptop-image.png" alt="laptop-image">
+                        <img src="assets/img/laptop-image.png" alt="laptop-image">
                     </div>
                     <div class="dofb">
                         <div class="date">
@@ -429,7 +429,7 @@
                 </div>
                 <div class="b-col">
                     <div class="col-image">
-                        <img src="/assets/img/laptop-image.png" alt="laptop-image">
+                        <img src="assets/img/laptop-image.png" alt="laptop-image">
                     </div>
                     <div class="dofb">
                         <div class="date">
@@ -445,7 +445,7 @@
                 </div>
                 <div class="b-col">
                     <div class="col-image">
-                        <img src="/assets/img/laptop-image.png" alt="laptop-image">
+                        <img src="assets/img/laptop-image.png" alt="laptop-image">
                     </div>
                     <div class="dofb">
                         <div class="date">
