--- a/index.html
+++ b/index.html
@@ -45,6 +45,30 @@
                 </div>
             </div>
         </nav>
+        <div class="drop-down">
+            <div class="ind-wrapper">
+                <ul>
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Calender</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <div class="social-icon">
+                    <a href="/">
+                        <img src="assets/img/icons/twitter.png" alt="">
+                    </a>
+                    <a href="/">
+                        <img src="assets/img/icons/facebook.png" alt="">
+                    </a>
+                    <a href="/">
+                        <img src="assets/img/icons/linkedin.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="hero_section">
@@ -462,6 +486,27 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="footer">
+            <div class="ind-wrapper">
+                <h2>NEWSLETTER</h2>
+                <form action="">
+                    <div class="field-box">
+                        <input type="text" placeholder="Enter email address" />
+                        <button type="submit" class="button">Subscribe</button>
+                    </div>
+                    <span class="error">Please provide a valid email address</span>
+                </form>
+                <ul>
+                    <li><a href="/">&#169; 2019 Indegene. All rights reserved</a></li>
+                    <li><a href="/">Contact Us</a></li>
+                    <li><a href="/">Privacy Policy</a></li>
+                    <li><a href="/">CSR Policy</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
     <script src="assets/js/vendor/jquery-3.5.1.js"></script>
     <script src="assets/js/app.js"></script>
